<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6EB171"
    tools:context=".MainActivity">
<!--This activity breaks pretty hard when rotated to landscape mode.  -->
<!--I'm not sure how to fix it yet; probably should have used a scrollable activity...-->

    <!--Adjusted text box to fit parent width and reference text from strings.xml-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#6EB171"
        android:contentDescription="@string/header"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Added a banner image-->
    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/banner_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/banner" />
    <!--Added a table layout for image buttons-->
    <!--Used android:stretch columns to center buttons in rows-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerImage"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<!--Added image buttons in table layout and linked to separate activities in MainActivity.kt-->
            <ImageButton
                android:id="@+id/spottedSalamanderButton"
                android:layout_width="200dp"
                android:layout_height="155dp"
                android:layout_gravity="fill_horizontal|top"
                android:backgroundTint="#376762"
                android:contentDescription="@string/button1_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/small_spotted_salamander" />

            <ImageButton
                android:id="@+id/troutLiliesButton"
                android:layout_width="200dp"
                android:layout_height="155dp"
                android:backgroundTint="#376762"
                android:contentDescription="@string/button2_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/trout_lillies" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/barnaclesButton"
                android:layout_width="200dp"
                android:layout_height="155dp"
                android:layout_gravity="fill_horizontal|top"
                android:backgroundTint="#376762"
                android:contentDescription="@string/button3_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/barnacles" />

            <ImageButton
                android:id="@+id/ribbonSnakeButton"
                android:layout_width="200dp"
                android:layout_height="155dp"
                android:layout_gravity="fill_horizontal|top"
                android:backgroundTint="#376762"
                android:contentDescription="@string/button4_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ribbon_snake" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/violetsButton"
                android:layout_width="200dp"
                android:layout_height="155dp"
                android:layout_gravity="fill_horizontal|top"
                android:backgroundTint="#376762"
                android:contentDescription="@string/button5_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/violets" />

            <ImageButton
                android:id="@+id/lizardButton"
                android:layout_width="200dp"
                android:layout_height="155dp"
                android:layout_gravity="fill_horizontal|top"
                android:backgroundTint="#376762"
                android:contentDescription="@string/button6_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/lizard" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>